# finite-monkey-engine

./: .gitignore  README.md  README_CN.md  env.example  forward_diff_and_ddl.md  multi_vuln_reasoning_refactor_plan.md  nodes_config.py  nodes_injector.py  output_cn.md  output_en.md  plan.md  pyproject.toml  requirements-from-uv.txt  requirements.txt  root_service.py  run.py  run.sh  rx.py
FiniteMonkey.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/: core.py  ipython.py  translation.py
docs/: PLANNING_CODEX_REFACTOR_PLAN.md  PLANNING_COVERAGE_REPAIR_PLAN.md  REASONING_MULTI_AGENT_REFACTOR_PLAN.md  VALIDATION_CODEX_REFACTOR_PLAN.md  flows.md
models/: schemas.py
path/to/app/: core.py
path/to/src/: runui.py
path/to/ui/: widgets.py
services/: cache.py  llm.py  translation.py
src/: ai_async_eng.py  ai_engine.py  codex_runner.py  codex_service.py  db.sql  dynamic_governor.py  main.py  main_pipeline.py  nodes_config.py  root_service.py  run.py  run_codex_validation_sample.py  run_context.py  runui.py  tracing.py
src/agents/: chat_app.py  formatted_console.py  md_output.py  sql_generate.py
src/ai_providers/: __init__.py  base.py
src/codebaseQA/: arag_processor.py  rag_processor.py
src/dao/: __init__.py  aentity.py  atask_mgr.py  db3.py  entity.py  finding_mgr.py  task_mgr.py
src/dataset/agent-v1-c4/: datasets.json
src/knowledges/: entity.py
src/openai_api/: model_config.json  openai.py  routes.py
src/planning/: aplanning_v2.py  business_flow_extractor.py  config_utils.py  planning.py  planning_processor.py  planning_v2.py
src/project/: aproject_audit.py  aproject_parser.py  project_audit.py  project_parser.py
src/prompt_factory/: __init__.py  businessflow_coverage_repair_prompt.py  businessflow_planning_prompt.py  periphery_prompt.py  prompt_assembler.py  security_prompts.py  validation_codex_prompt.py  vul_reasoning_json_prompt.py
src/reasoning/: scanner.py
src/reasoning/utils/: scan_utils.py
src/res_processor/: ares_processor.py  res_processor.py
src/tree_sitter_parsing/: __init__.py  project_audit.py  project_parser.py
src/utils/: cache_manager.py
src/utils/blockchain/: __init__.py  chain_config.py  contract_fetcher.py
src/validating/: finding_checker.py
src/validating/analyzers/: __init__.py  cross_contract.py  data_flow.py  economic_impact.py
src/validating/detectors/: __init__.py  economic_exploits.py  flash_loan_detector.py
src/validating/intelligence/: __init__.py  threat_intel.py
src/validating/language/: __init__.py  cairo_detector.py  language_detection.py  move_detector.py  solana_detector.py
src/validating/monitoring/: __init__.py  security_monitor.py
ui/: widgets.py
