[project]
name = "FiniteMonkey"
version = "0.0.1"
description = "Intelligent vulnerability mining engine."
authors = [{ name = "Xue Yue" }]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.10"

dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "colorama>=0.4.6",
    "dependency-injector>=4.45.0",
    "et-xmlfile>=1.1.0",
    "idna>=3.10",
    "joblib>=1.4.2",
    "numpy>=1.24.4",
    "openpyxl>=3.1.5",
    "pandas>=1.24.4",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.11.0a2",
    "pydantic-ai>=0.0.24",
    "pydantic-settings>=2.7.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "simplejson>=3.19.3",
    "six>=1.16.0",
    "SQLAlchemy>=2.0.35",
    "threadpoolctl>=3.5.0",
    "tqdm>=4.66.5",
    "tree-sitter>=0.24.0",
    "tree-sitter-solidity>=1.2.11",
    "typing_extensions>=4.12.2",
    "tzdata>=2024.2",
    "urllib3>=2.2.3",
]

[project.urls]
"Homepage" = "https://github.com/BradMoonUESTC/finite-monkey-engine"
"Bug Reports" = "https://github.com/BradMoonUESTC/finite-monkey-engine/issues"
"Funding" = "https://github.com/BradMoonUESTC/finite-monkey-engine"
"Say Thanks!" = "https://github.com/BradMoonUESTC/finite-monkey-engine"
"Source" = "https://github.com/BradMoonUESTC/finite-monkey-engine"

[project.scripts]
finite_monkey_engine = "finite_monkey_engine:main"
finite_monkey_root = "root.py:root"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.uv.sources]
"finite_monkey_engine" = { workspace = true }


[tool.hatch.build.targets.wheel]
packages = ["finite_monkey_engine"]


[tool.uv.workspace]
"members" = ["/FiniteMonkey.egg-info/entry_points.txt"]

[tool.uv]
package = true
compile-bytecode = true
prerelease = "allow"

[tool.uv.pip]
compile-bytecode = true
emit-build-options = true
emit-index-annotation = true
emit-marker-expression = true
python = "3.12"
python-version = "3.12"
universal = true


[tool.setuptools.package-dir]
"finite_monkey_engine" = "."

[tool.black]
target-version = ['py312']
line-length = 120
skip-string-normalization = true
skip-magic-trailing-comma = true
force-exclude = '''
/(
  | docs
  | setup.py
)/
'''

[tool.isort]
py_version = 312
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_third_party = []
known_first_party = []
known_local_folder = []
# style: black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
lines_after_imports = 2
force_single_line = true
skip_glob = ["docs/*", "setup.py"]
filter_files = true

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["docs", "test", "tests"]
ignore = ["I001"]
fixable = ["ALL"]
unfixable = []
preview = true
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.mypy]
# Platform configuration
python_version = "3.12"
# imports related
plugins = ['pydantic.mypy']
ignore_missing_imports = true
follow_imports = "silent"
# None and Optional handling
no_implicit_optional = false
strict_optional = false
# Configuring warnings
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_return_any = false
# Untyped definitions and calls
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
# Disallow dynamic typing
disallow_subclassing_any = false
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
# Miscellaneous strictness flags
allow_untyped_globals = true
allow_redefinition = true
local_partial_types = false
implicit_reexport = true
strict_equality = true
# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true
exclude = ["docs", "test", "tests"]
